--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "^14.2.0"
+    "next": "^14.2.0",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
